SET(LCTRIESRC            btrie.c)
ADD_LIBRARY(lcbtrie STATIC ${LCTRIESRC})

SET(LCTRIE_CFLAGS "-DBUILD_RSPAMD")
IF(ENABLE_FULL_DEBUG MATCHES "OFF")
if ("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
    SET(LCTRIE_CFLAGS "${LCTRIE_CFLAGS} -O3")
endif ()
ENDIF()

set_target_properties(lcbtrie PROPERTIES COMPILE_FLAGS "${LCTRIE_CFLAGS}")