SET(STRINGZILLASRC            lib.c)

SET(SZ_DEFINITIONS
        "-DSZ_DYNAMIC_DISPATCH=1"
        PARENT_SCOPE)

TARGET_ARCHITECTURE(ARCH)
IF ("${ARCH}" STREQUAL "x86_64")
    LIST(APPEND SZ_DEFINITIONS "-DSZ_USE_X86_AVX512=1")
    LIST(APPEND SZ_DEFINITIONS "-DSZ_USE_X86_AVX2=1")
    LIST(APPEND SZ_DEFINITIONS "-DSZ_USE_MISALIGNED_LOADS=1")
ENDIF ()
IF ("${ARCH}" STREQUAL "arm64")
    LIST(APPEND SZ_DEFINITIONS "-DSZ_USE_ARM_NEON=1")
    LIST(APPEND SZ_DEFINITIONS "-DSZ_USE_ARM_SVE=1")
    LIST(APPEND SZ_DEFINITIONS "-DSZ_USE_MISALIGNED_LOADS=1")
ENDIF ()

FOREACH (DEFINITION ${SZ_DEFINITIONS})
    ADD_DEFINITIONS(${DEFINITION})
ENDFOREACH ()

ADD_LIBRARY(rspamd-stringzilla STATIC ${STRINGZILLASRC})
SET_TARGET_PROPERTIES(rspamd-stringzilla PROPERTIES VERSION ${RSPAMD_VERSION})